--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,24 @@
 body {
     margin: 1em;
     font-family: Arial, Helvetica, sans-serif;
-
 }
+.axis-label {
+    font-size: 2em;
+    font-weight: bold;
+    fill: #000000  
+}
+.axis line{
+    stroke: #000000;
+    stroke-width: 2;
+    shape-rendering: crispEdges;
+}    
+.axis path {
+    stroke: #000000;
+    stroke-width: 3;
+    shape-rendering: crispEdges;
+}    
+.axis text {
+    fill: #000000;
+    font-family: Georgia;
+    font-size: 1.5em;
+}        
