--- a/styles/main.css
+++ b/styles/main.css
@@ -22,3 +22,13 @@ body {
     font-family: Georgia;
     font-size: 1.5em;
 }        
+.legend {
+    font-size: 2em;
+    font-weight: bold;
+    text-anchor: right;
+}
+.grid line {
+    stroke: #000000;
+    stroke-opacity: 0.2;
+    shape-rendering: crispEdges;
+}
